Resolved change: String identification of Crop.java on CropDao.java

--- a/src/main/java/com/plantfarmlogger/model/todo.txt
+++ b/src/main/java/com/plantfarmlogger/model/todo.txt
@@ -1,9 +1,5 @@
-CropBed.java:
-    resolve all usages
+Crop.java:
     implement methods and use DAO
-Plant.java:
-    resolve all usages
-    merge with Crop
 CropLog.java:
 	implement methods and use DAO
 Plant.java subclasses:
