--- a/src/main/java/com/plantfarmlogger/model/todo.txt
+++ b/src/main/java/com/plantfarmlogger/model/todo.txt
@@ -14,6 +14,4 @@ Plant.java subclasses:
         HerbCrop - getActiveCompounds()
 
 Diagram:
-    1. Interfaces:
-        a. Prunable - use LocalDate class
-    2. SubClasses - color code interface implementations
+    1. Update CropBed to Crop with all respective changes
